<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arty Artist</string>
    <string name="info">Waiting for Friends&#8230;</string>
    <string name="nofriends">No Friends</string>
    <string name="info_blank"></string>
    <string name="info_wait">Please Wait&#8230;</string>
    <string name="about_menu_name">About</string>
    <string name="menuinformation">Navigation Menu Scrolls by moving finger to the left or right for more options on smaller screens</string>
    <string name="about_message">Arty the Artist.\n\nVisit http://artytheartist.com for more info.</string>
    <string name="pacetext">Pace</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailaddress">Email</string>
    <string name="password">Password</string>
    <string name="newusertitle">New Member Registration</string>
    <string name="newusersummary">Click here to Register for Network Access. After Registration exit setup and reenter and you should be able to set your Network Settings.</string>
    <string name="changepasswordtitle">Change Password</string>
    <string name="changepasswordsummary">Check box to change password at Start of application.  You will not be able to view the web application unless you know this password.</string>
    <string name="changepasswordmessage">You will not be able to view your information at <a>http://artytheartist.com</a> unless you know this password.</string>
    <string name="waitforconfirmation">Wait for Confirmation before moving from here</string>
    <string name="memberidretrieved">Your Member ID was successfully Retrieved</string>
    <string name="memberidnotretrieved">There was an error. Your Member ID was not successfully Retrieved</string>
    <string name="invalidemail">Invalid Email Address</string>
    <string name="invalidpassword">Invalid Password</string>
    <string name="passwordsdontmatch">Passwords do not match</string>
    <string name="invalidfname">Invalid First Name</string>
    <string name="invalidlname">Invalid Last Name</string>
    <string name="invalidnewuser">Invalid New User.  Make sure all fields are correct and try again</string>
    <string name="newuser">New User</string>
    <string name="fullname">Name</string>
    <string name="addfriends">Add Friends</string>
    <string name="goback">Back</string>
    <string name="goforward">Forward</string>
    <string name="goplay">Play or Pause</string>    
    <string name="invite">Invite</string>
    <string name="acceptfriend">Accept Friend</string>
    <string name="showfriend">Show Friend</string>
    <string name="ignorefriend">Ignore Friend</string>
    <string name="hidefriend">Hide Friend</string>
    <string name="uninvite">Uninvite</string>
    <string name="waitforfriends">Loading Friends&#8230;</string>
    <string name="loadingfriends">Loading Friends</string>
    <string name="notloadingfriends">Cannot load friends.  Try Again Later.</string>
    <string name="newusermessage">If your email is already entered in our system then press Cancel and go to Menu->Preference->Email address and enter your email address.  Your Member Id will be automatically entered for you.</string>
    <string name="friends">Friends</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="username">User Name</string>
    <string name="showhidefriend">Select friend  to Show/Hide</string>
    <string name="friendtoaccept">Select Friend to Accept</string>
    <string name="friendtoinvite">Select Friend to Invite</string>
    <string name="durationis">Duration</string>
    <string name="accountcategorytitle">Account Settings</string>
    <string name="loginsettingstitle">Account Login</string>
    <string name="loginsettingsummary">Enter your email address.  You must have a valid email address to use the network option.</string>
    <string name="loginsettingdialogtitle">Account Settings</string>
    <string name="loginsettingdialogmessage">Enter email address</string>
    <string name="loginsettingshint">artytheartist@mapmymotion.com</string>
    <string name="loginmemberidtitle">Member ID</string>
    <string name="loginmemberidsummary">Enter your Member ID.  This is your assigned member id and should not be manually changed. </string>
    <string name="loginmemberiddialogtitle">Account Settings</string>
    <string name="loginmemberiddialogmessage">Enter Member ID</string>
    <string name="connectedtoserver">Connected to server </string>
    <string name="noconnectiontoserver">Cannot establish connection to </string>
    <string name="waitforacceptance">Awaiting Acceptance</string>
    <string name="activefriends">Active Friends</string>
    <string name="loggedin">Active</string>
    <string name="faq">FAQ</string>
    <string name="list">List</string>
    <string name="colormecategorytitle">Color Me</string>
    <string name="colormecolortitle">Select Color</string>
    <string name="colormecolorsettingsmessage">Color ID</string>
    <string name="colormecolorsettingssummary">Select Color Summary</string>
    <string name="colormebrushsettingscategorytitle">Color Me Brush Width</string>
    <string name="colormebrushsettingstitle">Select Brush Width</string>
    <string name="colormebrushsettingsdialogtitle">Dialog Brush Width</string>
    <string name="colormebrushsettingsmessage">Brush Width</string>
    <string name="colormebrushsettingssummary">Brush Width Summary</string>
    <string name="colorpickerbrush">Brush</string>
    <string name="colorpickerbackground">Background</string>    
    <string name="brush">Brush Settings</string>
    <string name="brushwidth">10</string>
    <string name="textwidth">36</string>
    <string name="eraserwidthvalue">50</string>
    <string name="color">Color</string>
    <string name="stroketext">Brush Width</string>
    <string name="erasetext">In Erase Mode.  Click again to Cancel</string>
    <string name="erasecancel">Erase Mode Cancelled.  Click again to Cancel</string>
    <string name="eraserwidth">Eraser Width</string>
    <string name="cleartext">Clear. If screen does not completely clear just lightly tap on the screen and that should take care of it.</string>
    <string name="colorpickerexplain">Move finger around one of the outer circles to select color. Click on the inner circle to select.</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="background">Set BackGround</string>
    <string name="orientationchange">Press Redo Button if your drawing does not look right</string>
    <string name="savetext">Save\nShow</string>
    <string name="deleteimage">Remove\nShow</string>    
    <string name="restoretext">Restore</string>
    <string name="friendstext">Friends</string>
    <string name="setuptext">Settings</string>
    <string name="abouttext">About</string>
    <string name="send_to">Send To</string>
    <string name="normal">Normal</string>
    <string name="emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="glow">Glow</string>
    <string name="networkingonoff_summary">Networking can create massive data usage charges based on your cell phone user plan.  After turning networking on or off, restart the application.</string>
    <string name="networkingonoff_title">Networking</string>
    <string name="networkingcategory_title">Network</string>
    <string name="networkiddefault">96.31.86.129</string>
    <string name="networkiddalogmessage">Set Network ID.</string>
    <string name="networkiddialogtitle">Set Network ID.</string>
    <string name="networkidsummary">Set Network ID.   Network traffic through the default server can be restricted.  We recommend purchasing your own server at sales@mapmymotion.com</string>
    <string name="networkidtitle">Network ID</string>
    <string name="networknotavailable">Network Not Available.  Go to Menu->Settings and turn on Network Feature and restart Application.</string>
    <string name="messagenotavailable">Network must be on to message between users.  Go to Menu->Settings and turn on Network Feature and restart Application.</string>
    <string name="messagesent">Message sent to your friends</string>
    <string name="nomessage">Enter text and click on Message icon</string>
    <string name="colorselection">Color Selection</string>
    <string name="filename">File Name</string>
    <string name="sharefile">artytheartist</string>
    <string name="textsizetext">Text Size</string>
    <string name="imagedoesnotexist">Path to this image does not exist.  The image is probably cached from Google Drive or Picasa</string>
    <string name="textentryhint">Enter Text and click on Drawing or Message Icon.</string>
    <string name="fonts_roboto_thin_ttf">fonts/Roboto-Thin.ttf</string>
    <string name="protractortitle">Angle in Degrees</string>
    <string name="colorsampler">Color Sampler</string>
    <string name="colorsamplerenabled">Color Sampler is enabled.  Click Sampler Icon again to turn off.  Select as many colors as you like and they will be in a scrollable bar at the bottom of the Color Selector.</string>
    <string name="colorsamplernotenabled">Color Sampler is off.  Click Sampler Icon again to turn On.</string>
    <string name="opaque">Opaque</string>
    <string name="transparent">Tranparent</string>
    <string name="slideshow">Show Images</string>
    <string name="selectoneimage">Please select at least one image</string>
    <string name="noimages">No Images selected or exist on this device</string>
    <string name="slideshowcancel">To cancel Slide Show press on Clear All or Image Selection menu item again.</string>
    <string name="slideshowsummary">Seconds between slides</string>
    <string name="slideshowtitle">Slide\nShows</string>
    <string name="slideshowdelay">Seconds between Images</string>
    <string name="imagesupdating">Images Updating&#8230;Please Wait</string>
    <string name="imageselectioninstruction">Select Image for Individual Image. Select Checkboxes on images and Start Slideshow for slide show mode.</string>
    <string name="networkdown">Network not available.  Try Again in a few minutes.</string>
    <string name="clearselectedimages">Clear Selections</string>
    <string name="selectallimages">Select All</string>
    <string name="information">Information</string>
    <string name="chat">Chat</string>
    <string name="angle">Angle</string>  
    <string name="fonts">Fonts</string>          
    <string name="selectfonts">Select Font</string>
    <string name="deleteplaylist">Delete Play List: </string>
    
<string name="messages">Messages</string>    
    <string name="add">Add</string>
    <string name="member_hint">Enter Member Name</string>
    <string name="group_maintenance">Group Maintenance&#8230;</string>
<string name="tools">Tools</string>    
</resources>