<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:background="@android:color/transparent" >

    <Button
        android:id="@+id/leftbutton"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="@drawable/mediapriorselector"
        android:contentDescription="@string/goback"
        android:onClick="ClickHandler" />

    <Button
        android:id="@+id/centerbutton"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/mediastateselector"
        android:contentDescription="@string/goplay"
        android:onClick="ClickHandler" />

    <Button
        android:id="@+id/rightbutton"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/medianextselector"
        android:contentDescription="@string/goforward"
        android:onClick="ClickHandler" />

</RelativeLayout>